--- a/formulario/src/components/Indicators/indicators.module.scss
+++ b/formulario/src/components/Indicators/indicators.module.scss
@@ -12,9 +12,18 @@
     border-radius: 50%;
     color: $white;
     font-weight: bold;
+}
 
-    &:focus{
-        background-color: $light-blue;
-        color: $purplish-blue;
-    }
+.buttonSelected {
+    background-color: $light-blue;
+    color: $purplish-blue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3rem;
+    width: 3rem;
+    border: 1px solid $white;
+    padding: 1rem;
+    border-radius: 50%;
+    font-weight: bold;
 }
