--- a/formulario/src/components/Buttons/buttons.module.scss
+++ b/formulario/src/components/Buttons/buttons.module.scss
@@ -1,11 +1,38 @@
 @import "../../styles/var.module";
 
-.buttonsContainer{
+.buttonsContainer {
     display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+    margin: 1.2rem 1.2rem;
+
+    .next {
+        background-color: $marine-blue;
+        border: none;
+        color: $magnolia;
+        font-weight: 600;
+        padding: 12px 20px 12px 20px;
+        border-radius: 5px;
+    
+        &:active {
+            background-color: $purplish-blue;
+        }
+    }
+
+    .back {
+        background: none; 
+        border: none;
+        font-weight: 600;
+        color: $cool-gray;
+    
+        &:active{
+            color: $purplish-blue;
+        }
+    }
+
+    .nonBack{
+        visibility: hidden;
+    }
 }
 
-.next{
-    background-color: $marine-blue;
-    border: none;
-    color: $white;
-}
+
