--- a/formulario/src/styles/page.module.scss
+++ b/formulario/src/styles/page.module.scss
@@ -13,15 +13,16 @@
 }
 
 .cardContainer{
-    height: 70vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
 }
 
 .buttonsContainer{
-    height: 15vh;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: $white;
 }
