agregando un context

--- a/formulario/src/styles/globals.scss
+++ b/formulario/src/styles/globals.scss
@@ -17,4 +17,5 @@ body {
   background-color: $magnolia;
   background-image: url("../../public/bg-sidebar-mobile.svg");
   background-repeat: no-repeat;
+  font-family: 'Ubuntu', sans-serif;;
 }
