--- a/formulario/src/components/Card/PersonalInfo/personalInfo.module.scss
+++ b/formulario/src/components/Card/PersonalInfo/personalInfo.module.scss
@@ -3,6 +3,39 @@
 .personalContainer{
     width: 90vw;
     background-color: $white;
-    padding: 2rem;
+    padding: 3rem 2rem 3rem 2rem;
     border-radius: 10px;
+    display:flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+    .infoContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        
+        h2{
+            font-size: 2.4rem;
+            color: $marine-blue;
+        }
+
+        .text{
+            display: flex;
+            flex-direction: column;
+            gap: .8rem;
+            
+    
+            p{
+                font-size: 1.6rem;
+                color: $cool-gray;
+            }
+        }
+
+    }
+
+    form{
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+    }
 }
