--- a/formulario/src/components/Card/card.module.scss
+++ b/formulario/src/components/Card/card.module.scss
@@ -2,6 +2,7 @@
 
 .card{
     background-color: $white;
-    border-radius: 20px;
     box-shadow: 0px 3px 5px 0px  $light-gray;
+    width: 90vw;
+    border-radius: 10px;
 }
