--- a/formulario/src/components/Card/PersonalInfo/personalInfo.module.scss
+++ b/formulario/src/components/Card/PersonalInfo/personalInfo.module.scss
@@ -1,41 +1,7 @@
 @import "../../../styles/var.module";
 
-.personalContainer{
-    width: 90vw;
-    background-color: $white;
-    padding: 3rem 2rem 3rem 2rem;
-    border-radius: 10px;
-    display:flex;
+.form {
+    display: flex;
     flex-direction: column;
     gap: 1.5rem;
-
-    .infoContainer{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        
-        h2{
-            font-size: 2.4rem;
-            color: $marine-blue;
-        }
-
-        .text{
-            display: flex;
-            flex-direction: column;
-            gap: .8rem;
-            
-    
-            p{
-                font-size: 1.6rem;
-                color: $cool-gray;
-            }
-        }
-
-    }
-
-    form{
-        display: flex;
-        flex-direction: column;
-        gap: 1.5rem;
-    }
 }
