--- a/formulario/src/components/Card/card.module.scss
+++ b/formulario/src/components/Card/card.module.scss
@@ -1,8 +1,11 @@
 @import "../../styles/var.module";
 
 .card{
-    background-color: $white;
-    box-shadow: 0px 3px 5px 0px  $light-gray;
     width: 90vw;
+    background-color: $white;
+    padding: 3rem 2rem 3rem 2rem;
     border-radius: 10px;
+    display:flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
