--- a/formulario/src/components/Card/AddOns/CheckBox/checkbox.module.scss
+++ b/formulario/src/components/Card/AddOns/CheckBox/checkbox.module.scss
@@ -1,11 +1,99 @@
 @import "../../../../styles/var.module.scss";
 
-.checkButton{
+.checkButton {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
     background-color: transparent;
     border: 1px solid $light-gray;
     border-radius: 10px;
-    padding: 10px 5px 10px 5px;
+    padding: 15px 12px 15px 12px;
+
+
+    input {
+        appearance: none;
+        border: 1px solid $light-gray;
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+        height: 20px;
+        width: 20px;
+        border-radius: 4px;
+
+        &:checked{
+            background-color: $purplish-blue;
+        }
+    }
+
+    .info{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex-grow: 1;
+        gap: 3px;
+
+        h3{
+            color: $marine-blue;
+            font-size: 1.5rem;
+        }
+
+        p{
+            color: $cool-gray;
+            font-size: 1.2rem;
+        }
+    }
+
+
+    .priceText{
+        color: $purplish-blue;
+    }
+}
+
+.checkedButton{
     
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+    background-color: $magnolia;
+    border: 1px solid $purplish-blue;
+    border-radius: 10px;
+    padding: 15px 12px 15px 12px;
+
+
+    input {
+        appearance: none;
+        border: 1px solid $light-gray;
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+        height: 20px;
+        width: 20px;
+        border-radius: 4px;
+
+        &:checked{
+            background-color: $purplish-blue;
+        }
+    }
+
+    .info{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        flex-grow: 1;
+        gap: 3px;
+
+        h3{
+            color: $marine-blue;
+            font-size: 1.5rem;
+        }
+
+        p{
+            color: $cool-gray;
+            font-size: 1.2rem;
+        }
+    }
+
+
+    .priceText{
+        color: $purplish-blue;
+    }
+
 }
